--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,29 @@ version: "3.9"
 
 services:
   app:
+    container_name: app
     build:
       context: .
     ports:
       - "8000:8000"
-      - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
     environment:
       - PG_USER=new
       - PG_PASSWORD=new
       - PG_DB=new
       - PG_PORT=5432
-      - PG_HOST=localhost
+      - PG_HOST=db
+
+  db:
+    container_name: db
+    image: postgres:15
+    environment:
+      - POSTGRES_DB=new
+      - POSTGRES_USER=new
+      - POSTGRES_PASSWORD=new
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
 volumes:
   pgdata: {}
