--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,25 @@
 version: "3.9"
 
 services:
+  db:
+    image: postgres:15
+    container_name: app_db
+    environment:
+      - POSTGRES_USER=new
+      - POSTGRES_PASSWORD=new
+      - POSTGRES_DB=new
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
   app:
-    container_name: app
-    build:
-      context: .
+    build: .
+    image: ssmagon/django_app:latest
+    container_name: django_app
     ports:
       - "8000:8000"
-    environment:    
+    environment:
       - PG_USER=new
       - PG_PASSWORD=new
       - PG_DB=new
@@ -16,17 +28,5 @@ services:
     depends_on:
       - db
 
-  db:
-    container_name: db
-    image: postgres:15
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_DB=new
-      - POSTGRES_USER=new
-      - POSTGRES_PASSWORD=new
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-
 volumes:
-  pgdata: {}
+  pgdata:
