--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-POSTGRES_DB=new
-POSTGRES_USER=new
-POSTGRES_PASSWORD=new
+SECRET_KEY=django-insecure-(5d_*k*!6*rk=g=+06jl+=u%d76p&2jps!!1zhf#lck(=lg*nx
+DATABASE_URL=postgres://magon_sql_user:s8Cedlgmvlid4VObCbrKszUNzE2ysDTC@dpg-cp8ag8gl6cac73c1bpmg-a.oregon-postgres.render.com/magon_sql
